syntax = "proto3";

package todoPackage;

service Todo {
  rpc createTodo(TodoItem) returns(TodoItem);
  rpc readTodos(NoParam) returns(TodoItems);
  rpc todosServerStream(NoParam) returns(stream TodoItem);
  rpc todosClientStream(stream TodoItem) returns(TodoItems);
  rpc todosBiDirectionalStream(stream TodoItem) returns(stream TodoItem);
}

message NoParam {}
message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}